--- a/app/views/albums/_form.html.erb
+++ b/app/views/albums/_form.html.erb
@@ -19,7 +19,17 @@
     <%= f.label :description %><br>
     <%= f.text_area :description %>
   </div>
+  <div class="field">
+    <%= f.label :public %><br>
+    <%= f.check_box :public %>
+  </div>
+  <div class="field">
+    <%= f.label :rating %><br>
+    <%= f.text_field :rating %>
+  </div>
+  
   <div class="actions">
     <%= f.submit %>
   </div>
+
 <% end %>
