--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,11 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <% flash.each do |k, msg| -%>
+  
+  <% content_tag :div, msg, class: k -%>
+
+  <% end -%>
 
 <%= yield %>
 
