--- a/app/views/albums/_album.html.erb
+++ b/app/views/albums/_album.html.erb
@@ -4,7 +4,8 @@
 
       <tr>    
         <td><%= album.title %></td>
-        <!--<td><%= album.description %></td>-->
+        <td><%= album.public %></td>
+        <td><%= img_rating_tag album.rating %> </td>
         <td><%= link_to 'Show', album %></td>
         <td><%= link_to 'Edit', edit_album_path(album) %></td>
         <td><%= link_to 'Destroy', album, method: :delete, data: { confirm: 'Are you sure?' } %></td>
