--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -4,8 +4,9 @@
   <thead>
     <tr>
       <th>Title</th>
-      <!--<th>Description</th>-->
-      <th colspan="3"></th>
+      <th>Public</th>
+      <th>Rating</th>
+      <th colspan="4"></th>
     </tr>
   </thead>
   <tbody>
