Añadir campor que faltan al formulario shows

--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -9,10 +9,8 @@
       <th colspan="4"></th>
     </tr>
   </thead>
-  <tbody>
-    <% @albums.each do |album| %>      
-        <%= render album -%>
-      <% end %>
+  <tbody>      
+      <%= render @albums -%>
   </tbody>
 </table>
 
