--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@photo) do |f| %>
+<%= form_for([@album, @photo]) do |f| %>
   <% if @photo.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@photo.errors.count, "error") %> prohibited this photo from being saved:</h2>
@@ -18,10 +18,6 @@
   <div class="field">
     <%= f.label :image %><br>
     <%= f.file_field :image %>
-  </div>
-  <div class="field">
-    <%= f.label :album_id %><br>
-    <%= f.collection_select :album_id, Album.all, :id, :title, prompt: true %>
   </div>
   <div class="actions">
     <%= f.submit %>
